--- a/skills.html
+++ b/skills.html
@@ -93,14 +93,6 @@
                 <div class="content-gd col-lg-6 offset-lg-1">
                     <h5 class="title-small text-center">Programming languages</h5>
                     <div class="progress-info ">
-                      <h6 class="progress-tittle"><img src="assets/images/c.png " width="30px" alt=""></h6>
-                      <div class="progress">
-                          <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 70%"
-                              aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                          </div>
-                      </div>
-                  </div>
-                    <div class="progress-info ">
                         <h6 class="progress-tittle"><img src="assets/images/c-plus-plus.png " width="30px" alt=""></h6>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 60%"
@@ -133,7 +125,7 @@
                       </div>
                   </div>
                   <div class="progress-info ">
-                    <h6 class="progress-tittle"><img src="assets/images/sql.png " width="30px" alt=""></h6>
+                    <h6 class="progress-tittle"><img src="assets/images/sql-server-logo.jpg " width="30px" alt=""></h6>
                     <div class="progress">
                         <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 85%"
                             aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
